Align input fields in a single column.
Also corrected the javascript to set service input fields to read-only on reload
when the previously selected value in the services dropdown was a defined
service.

--- a/docs/style.css
+++ b/docs/style.css
@@ -35,6 +35,8 @@ li {
 }
 input {
     border: 1px solid #657b83;
+    float: right;
+    margin-left: 1em;
 }
 #service input[readonly] {
     background: #eee;
